Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
Equinix is shutting down its operations with us on April 30, 2025. They have graciously supported us for almost 5 years, but all good things come to an end.
Given the time frame, it's going to be hard to make a smooth transition of the cluster to somewhere else (TBD). Please expect in the next months some hiccups in the service and probably at least a full week of downtime to transfer gitlab to a different place.
All help is appreciated.
panfrost midgard - major issues with MelonDS emulator - not able to trace properly too
folks, I had a severe issue with melonDS emulator, with soft render it works fine of course, but once I enable opengl the feast of glitches starts and my systems almost hang. tested on 2 different rk3399 platforms with completely different settings (DE, display protocol,etc)
the emulator is quite easy to compile, I tested main https://github.com/Arisotura/melonDS with mario kart DS.
its the only decently performing DS emulator for arm linux so would be quite needed to have it not broken let say.
I can identify that this behavior was quite similar like to monolith linux x86 game with box86. maybe @icecream95 can confirm that. #5680 (closed)
I wasnt able to get apitrace to work properly, it wasnt able to replay it nicely due some issue with the buffer (6894: warning: failed to map buffer)..
So, I used SSR to record it at least, with mario kart for the DS as an example.
If you know any way to give you proper debug outputs without apitrace (not working here), please guide me. The issue seems catastrophic as you see on that short video.
You could try the steps I detailed at #6424 (comment 1372032), or maybe one of the various PAN_MESA_DEBUG options would work around it—sync,nocrc,dirty,nocache might be worth a try.
Okay… How about you run it (not in gdb) with BO_DUMP=999 PAN_MESA_DEBUG=gl3,noafbc,sync and compress and attach the last file written before it crashes?
(The files can be quite large, so you might want to delete them afterward to get the disk space back.)
I wasnt able. with sudo it doesnt crash, but doesnt generate anything. it looks like a privilege thing.. do you know a workaround @icecream95 ? odd, bc I am on a desktop folder...
pinebook-pro:build:% BO_DUMP=999 PAN_MESA_DEBUG=gl3,noafbc,sync /home/salva/panfork/run.sh ./melonDSmelonDS 0.9.4https://melonds.kuribo64.net/Audio output frequency: 48000 HzOpenGL: renderer: Mali-T860 (Panfork)OpenGL: version: 3.3 (Core Profile) Mesa 22.2.0-devel (git-9479a43136)Resetting JIT block cache...done resetting jit memdone resetting jit memMAC: 00:09:BF:11:22:33FW: WIFI CRC16 = GOODFW: AP1 CRC16 = GOODFW: AP2 CRC16 = GOODFW: AP3 CRC16 = GOODFW: USER0 CRC16 = GOODFW: USER1 CRC16 = BADGame code: AMCEROM entry: 02000000 00000005Cart ID: 00001FC2Re-encrypting cart secure arearemapping SWRAMSecure area decryption OKremapping DTCM 0 1000 ffffffff ffffffffPU: region 0 = 04000033 : enabled, 04000000-08000000PU: region 0 = 04000033 : enabled, 04000000-08000000PU: region 1 = 0200002B : enabled, 02000000-02400000PU: region 1 = 0200002B : enabled, 02000000-02400000PU: region 2 = 00000000 : disabled, 00000000-00000002PU: region 2 = 00000000 : disabled, 00000000-00000002PU: region 3 = 08000035 : enabled, 08000000-10000000PU: region 3 = 08000035 : enabled, 08000000-10000000PU: region 4 = 0300001B : enabled, 03000000-03004000PU: region 4 = 0300001B : enabled, 03000000-03004000PU: region 5 = 00000000 : disabled, 00000000-00000002PU: region 5 = 00000000 : disabled, 00000000-00000002PU: region 6 = FFFF001D : enabled, FFFF0000-FFFF8000PU: region 6 = FFFF001D : enabled, FFFF0000-FFFF8000PU: region 7 = 027FF017 : enabled, 027FF000-02800000PU: region 7 = 027FF017 : enabled, 027FF000-02800000remapping DTCM 3000000 3004000 0 fffff000Game is now bootingremapping DTCM ffffffff ffffffff 3000000 2ffc000PU: region 0 = 04000033 : enabled, 04000000-08000000PU: region 1 = 0200002D : enabled, 02000000-02800000PU: region 2 = 027E0021 : enabled, 027E0000-02800000PU: region 3 = 08000035 : enabled, 08000000-10000000PU: region 4 = 027E001B : enabled, 027E0000-027E4000PU: region 5 = 0100002F : enabled, 01000000-02000000PU: region 6 = FFFF001D : enabled, FFFF0000-FFFF8000PU: region 7 = 027FF017 : enabled, 027FF000-02800000remapping DTCM 27e0000 27e4000 ffffffff ffffffffPU region 0: 04000000-08000000, user=00 priv=0715111011/05100011PU region 1: 02000000-02800000, user=70 priv=7715111011/05100011PU region 2: 027E0000-02800000, user=00 priv=0015111011/05100011PU region 3: 08000000-10000000, user=00 priv=0315111011/05100011PU region 4: 027E0000-027E4000, user=00 priv=0315111011/05100011PU region 5: 01000000-02000000, user=00 priv=0715111011/05100011PU region 6: FFFF0000-FFFF8000, user=50 priv=5515111011/05100011PU region 7: 027FF000-02800000, user=00 priv=0315111011/05100011pan_core: failure in elf_update(WRITE): cannot write data to filepan_core: failure in elf_update(WRITE): cannot write data to filepan_core: failure in elf_update(WRITE): cannot write data to filepan_core: failure in elf_update(WRITE): cannot write data to filepan_core: failure in elf_update(WRITE): cannot write data to filepan_core: failure in elf_update(WRITE): cannot write data to filepan_core: failure in elf_update(WRITE): cannot write data to filepan_core: failure in elf_update(WRITE): cannot write data to filepan_core: failure in elf_update(WRITE): cannot write data to filePU: region 1 = 0200002B : enabled, 02000000-02400000PU region 0: 04000000-08000000, user=00 priv=0715111011/05100011PU region 1: 02000000-02400000, user=70 priv=7715111011/05100011PU region 2: 027E0000-02800000, user=00 priv=0015111011/05100011PU region 3: 08000000-10000000, user=00 priv=0315111011/05100011PU region 4: 027E0000-027E4000, user=00 priv=0315111011/05100011PU region 5: 01000000-02000000, user=00 priv=0715111011/05100011PU region 6: FFFF0000-FFFF8000, user=50 priv=5515111011/05100011PU region 7: 027FF000-02800000, user=00 priv=0315111011/05100011PU: region 2 = 023E0021 : enabled, 023E0000-02400000PU region 0: 04000000-08000000, user=00 priv=0715111011/05100011PU region 1: 02000000-02400000, user=70 priv=7715111011/05100011PU region 2: 023E0000-02400000, user=00 priv=0015111011/05100011PU region 3: 08000000-10000000, user=00 priv=0315111011/05100011PU region 4: 027E0000-027E4000, user=00 priv=0315111011/05100011PU region 5: 01000000-02000000, user=00 priv=0715111011/05100011PU region 6: FFFF0000-FFFF8000, user=50 priv=5515111011/05100011PU region 7: 027FF000-02800000, user=00 priv=0315111011/05100011unknown ARM9 IO write32 04001060 00000000 01FFFE54unknown ARM9 IO write32 04001064 00000000 01FFFE54unknown ARM9 IO write32 04001068 00000000 01FFFE54WIFI OFF[1] 3180 segmentation fault BO_DUMP=999 PAN_MESA_DEBUG=gl3,noafbc,sync /home/salva/panfork/run.sh